Stretch: Added fixed nav bar, added opacity.

--- a/css/index.css
+++ b/css/index.css
@@ -169,10 +169,13 @@ p {
   margin: 0 auto;
 }
 nav {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  margin: 0px auto;
+  text-align: center;
+  background-color: lightgrey;
+  opacity: 0.75;
 }
 nav h1 {
   font-size: 48px;
@@ -184,8 +187,9 @@ nav .links {
   max-width: 800px;
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 10px;
+  margin: 0px auto;
 }
 nav .links a {
   font-size: 18px;
